styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

h1 {
    font-family: "Brush Script MT", Helvetica, sans-serif;
    font-size: 3.8rem;
    margin-top: 20px;
    text-align: center;
}

h2, h3 {
    font-family: "Brush Script MT", Helvetica, sans-serif;
    font-size: 2.2rem;
}

.home-recipe-list {
    /* border: 1px solid red; */
    font-family: "Brush Script MT", Helvetica, sans-serif;
    font-size: 1.8rem;
    margin-top: 15px;
    text-align: center;
}

.home-recipe-list li {
    margin-bottom: 10px;
}

.home-recipe-list a {
    color: black;
}

.recipe-img {
    /* border: 2px solid red; */
    display: block;
    margin: 25px auto;
    height: auto;
    width: 520px;
}

